--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="We are private cigar club in Toronto"
     />
     <link rel="apple-touch-icon" href="./favicon.ico" />
     <!--
