--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   gtag('config', 'UA-152653225-1');
 </script>
 
-    <title>COHIBA Toronto</title>
+    <title>Toronto Cigar club</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
